# code-notes

./: .gitignore  README.md  code-notes-app-schema.json  index.html  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: build.yml
apps/tauri/: index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri/src/: main.tsx
apps/tauri/src-tauri/: Cargo.toml  errors.txt  errors_2.txt  errors_3.txt  errors_dm.txt
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx
scripts/: bump-version.js
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: data_management.rs  import.rs  mod.rs  progress.rs  query.rs  topics.rs
src-tauri/src/database/: json_db.rs  lazy_db.rs  mod.rs
src-tauri/src/database/models/: mod.rs  topic.rs
src-tauri/src/database/repository/: lazy_questions_repo.rs  lazy_topics_repo.rs  mod.rs  progress_repo.rs  quiz_session_repo.rs
src-tauri/src/utils/: markdown_parser.rs  mod.rs
src/components/pages/: DataManagementPage.tsx  ProgressDashboardPage.tsx  QuestionDetailPage.tsx  QuestionsPage.tsx  QuizModePage.tsx  QuizResultsPage.tsx  QuizSessionPage.tsx  SettingsPage.tsx  TopicsPage.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx
src/services/tauri/: dataManagement.service.ts  index.ts  (+5 more)
src/store/: index.ts
src/styles/: globals.css
src/types/: index.ts  topic.types.ts
(+37 files in other folders)
